fixed address input1 dropdown hidden behind address 2

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -63,6 +63,11 @@ label {
   // #b2bce0;
 }
 
+.venues_address1 {
+  position: relative;
+  z-index: 1000;
+}
+
 .halfway-button{
   text-align: center;
   margin: auto;
